<resources>
    <string name="app_name">RecFilm</string>
    <string name="button1">МЕНЮ</string>
    <string name="button2">ИЗБРАННОЕ</string>
    <string name="button3">ПОСМОТРЕТЬ ПОЗЖЕ</string>
    <string name="button4">ПОДБОРКИ</string>
    <string name="button5">НАСТРОЙКИ</string>
    <string name="disclaimer">Постеры предоставленны https://www.movieposters.com/</string>
    <string name="menu_selections_title">Подборки</string>
    <string name="menu_watch_later_title">Смотреть позже</string>
    <string name="menu_favorites_title">Избранное</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_watch_later">Посмотреть позже</string>
    <string name="menu_selections">Подборки</string>
    <string name="menu_settings_toast">Настройки</string>
    <string name="description_interstellar">Будущее Земли было пронизано бедствиями, голодом и засухой. Есть только один способ обеспечить выживание человечества: межзвездное путешествие. Недавно обнаруженная червоточина в дальних уголках нашей Солнечной системы позволяет команде астронавтов отправиться туда, где раньше не бывал ни один человек, на планете, которая может иметь подходящую среду для поддержания человеческой жизни.</string>
    <string name="description_batman">Бэтмен отправляется в преступный мир Готэм-сити, когда убийца-садист оставляет за собой след загадочных улик. По мере того, как улики начинают приближаться к дому, а масштаб планов преступника становится ясным, он должен наладить новые отношения, разоблачить преступника и восстановить справедливость. к злоупотреблению властью и коррупции, которые давно преследуют мегаполис.</string>
    <string name="description_the_social">Осенним вечером 2003 года выпускник Гарварда и гений компьютерного программирования Марк Цукерберг садится за свой компьютер и с энтузиазмом начинает работать над новой идеей. В ярости ведения блога и программирования то, что начинается в его комнате в общежитии, вскоре становится глобальной социальной сетью и революцией в общении. Всего через шесть лет и 500 миллионов друзей Марк Цукерберг стал самым молодым миллиардером в истории… но для этого предпринимателя успех приводит как к личным, так и к юридическим осложнениям.</string>
    <string name="description_star_vars">Спустя 30 лет после поражения Дарта Вейдера и Империи Рей, мусорщик с планеты Джакку, находит дроида BB-8, который знает местонахождение давно потерянного Люка Скайуокера. Рей, а также штурмовик-изгой и два контрабандиста оказываются в эпицентре битвы между Сопротивлением и устрашающими легионами Первого Ордена.</string>
    <string name="description_spider_man">Тайная личность Питера Паркера раскрывается всему миру. Отчаянно нуждаясь в помощи, Питер обращается к Доктору Стрэнджу, чтобы заставить мир забыть, что он Человек-Паук. Заклинание идет ужасно неправильно и разрушает мультивселенную, вызывая чудовищных злодеев, которые могут уничтожить мир.</string>
    <string name="description_ready_player_one">В 2045 году реальный мир стал суровым местом. Единственный раз, когда Уэйд Уоттс (Тай Шеридан) по-настоящему чувствует себя живым, это когда он сбегает в ОАЗИС, захватывающую виртуальную вселенную, где большинство людей проводит свои дни. В OASIS вы можете идти куда угодно, делать что угодно, быть кем угодно — единственными ограничениями являются ваше собственное воображение. ОАЗИС был создан блестящим и эксцентричным Джеймсом Холлидеем (Марк Райлэнс), который оставил свое огромное состояние и полный контроль над Оазисом победителю конкурса, состоящего из трех частей, который он задумал, чтобы найти достойного наследника. Когда Уэйд справится с первым испытанием в искажающей реальность охоте за сокровищами, он и его друзья — The High Five — попадут в фантастическую вселенную открытий и опасностей, чтобы спасти ОАЗИС.</string>
    <string name="description_queens_gambit">Девятилетняя сирота Бет Хармон тихая, угрюмая и внешне ничем не примечательная. То есть, пока она не сыграет свою первую партию в шахматы. Ее чувства обостряются, мышление становится яснее, и впервые в жизни она чувствует, что полностью контролирует ситуацию. К шестнадцати годам она участвует в Открытом чемпионате США. Но по мере того, как Бет оттачивает свои навыки в профессиональной сфере, ставки становятся выше, ее изоляция становится все более пугающей, а мысль о побеге становится все более заманчивой. По книге Уолтера Тевиса.</string>
    <string name="description_inception">Дом Кобб — искусный вор, лучший в опасном искусстве добычи, он крадет ценные секреты из глубины подсознания во сне, когда разум наиболее уязвим. Редкие способности Кобба сделали его желанным игроком в этом предательском новом мире корпоративного шпионажа, но также сделали его международным беглецом и стоили ему всего, что он когда-либо любил. Теперь Коббу предлагают шанс на искупление. Одна последняя работа может вернуть ему жизнь, но только если он сможет совершить невозможное, начало. Вместо идеального ограбления Коббу и его команде специалистов приходится проворачивать обратное: их задача — не украсть идею, а внедрить ее. Если им это удастся, это может быть идеальное преступление. Но никакое тщательное планирование или опыт не могут подготовить команду к встрече с опасным врагом, который, кажется, предугадывает каждое их движение. Враг, которого мог предвидеть только Кобб.</string>
    <string name="description_anna_inveting">В «Изобретая Анну» журналист, которому нужно многое доказать, расследует дело Анны Делви, легендарной немецкой наследницы Instagram, которая украла сердца светской жизни Нью-Йорка, а также украла их деньги. Но является ли Анна самой крупной аферисткой Нью-Йорка или она просто новый образ американской мечты? Анна и репортер образуют темную и забавную связь любви и ненависти, пока Анна ожидает суда, а наш репортер борется со временем, чтобы ответить на самый главный вопрос в Нью-Йорке: кто такая Анна Делви? Сериал вдохновлен статьей Джессики Пресслер, которая также является продюсером, в журнале New York Magazine «Как Анна Делви обманула тусовщиков Нью-Йорка».</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_Dialog">Вы хотите выйти?</string>
    <string name="text_Dialog_yes">Да</string>
    <string name="text_Dialog_no">Нет</string>
</resources>